.metadata/.plugins/org.eclipse.cdt.ui/esp32.build.log
18:32:02 **** Incremental Build of configuration Release for project esp32 ****
make all 
Building file: ../sloeber.ino.cpp
Starting C++ compile
"/home/guarita/Arduino/hardware/heltec/esp32/tools/xtensa-esp32-elf/bin/xtensa-esp32-elf-g++" -DESP_PLATFORM '-DMBEDTLS_CONFIG_FILE="mbedtls/esp_config.h"' -DHAVE_CONFIG_H "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/config" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/bluedroid" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/app_trace" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/app_update" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/bootloader_support" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/bt" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/driver" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/esp32" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/esp_adc_cal" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/ethernet" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/fatfs" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/freertos" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/heap" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/jsmn" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/log" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/mdns" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/mbedtls" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/mbedtls_port" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/newlib" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/nvs_flash" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/openssl" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/soc" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/spi_flash" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/sdmmc" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/spiffs" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/tcpip_adapter" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/ulp" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/vfs" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/wear_levelling" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/xtensa-debug-module" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/console" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/newlib" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/coap" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/wpa_supplicant" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/expat" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/json" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/nghttp" "-I/home/guarita/Arduino/hardware/heltec/esp32/tools/sdk/include/lwip" -std=gnu++11 -fno-exceptions -Os -g3 -Wpointer-arith -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -mlongcalls -nostdlib -Wall -Werror=all -Wextra -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wno-unused-parameter -Wno-sign-compare -fno-rtti -c -DF_CPU=240000000L -DARDUINO=10802 -DARDUINO_WIFI_Kit_32 -DARDUINO_ARCH_ESP32 -DESP32 -DCORE_DEBUG_LEVEL=0  -I"/home/guarita/Arduino/hardware/heltec/esp32/cores/esp32" -I"/home/guarita/Arduino/hardware/heltec/esp32/variants/wifi_kit_32" -I"/home/guarita/Arduino/libraries/DallasTemperature" -I"/home/guarita/Arduino/libraries/OneWire" -I"/home/guarita/Arduino/libraries/PubSubClient" -I"/home/guarita/Arduino/libraries/PubSubClient/src" -I"/home/guarita/Arduino/libraries/U8g2" -I"/home/guarita/Arduino/libraries/U8g2/src" -I"/home/guarita/Arduino/hardware/heltec/esp32/libraries/WiFi" -I"/home/guarita/Arduino/hardware/heltec/esp32/libraries/WiFi/src" -I"/home/guarita/Arduino/hardware/heltec/esp32/libraries/SPI" -I"/home/guarita/Arduino/hardware/heltec/esp32/libraries/SPI/src" -I"/home/guarita/Arduino/hardware/heltec/esp32/libraries/Wire" -I"/home/guarita/Arduino/hardware/heltec/esp32/libraries/Wire/src" -MMD -MP -MF"sloeber.ino.cpp.d" -MT"sloeber.ino.cpp.o" -D__IN_ECLIPSE__=1 -x c++ "../sloeber.ino.cpp"  -o  "sloeber.ino.cpp.o"
In file included from ../sloeber.ino.cpp:26:0:
../esp32.ino: In function 'void draw()':
../esp32.ino:88:7: error: 'temp_started' was not declared in this scope
  if (!temp_started) {
       ^
../esp32.ino:92:23: error: 'numberOfDevices' was not declared in this scope
   for (int i = 0; i < numberOfDevices; i++) {
                       ^
../esp32.ino:96:33: error: 'temp_addr' was not declared in this scope
    sprintf(addrStr, "%02X%02X", temp_addr[i][6], temp_addr[i][7]);
                                 ^
../esp32.ino:98:43: error: 'temp' was not declared in this scope
    sprintf(buff, "T[%s]:%.2f C", addrStr, temp[i]);
                                           ^
../esp32.ino: In function 'void publish_loop(void*)':
../esp32.ino:256:8: error: 'temp_started' was not declared in this scope
    if (temp_started)
        ^
../esp32.ino:257:17: error: 'temp' was not declared in this scope
     mqttpublish(temp[0], temp[1]);
                 ^
subdir.mk:34: recipe for target 'sloeber.ino.cpp.o' failed
make: *** [sloeber.ino.cpp.o] Error 1

18:32:03 Build Finished (took 1s.374ms)

